[gd_scene load_steps=3 format=3 uid="uid://di7wgqh7vibe7"]

[ext_resource type="Script" uid="uid://ukpnntfs15i0" path="res://src/scripts/questions.gd" id="1_23wpu"]
[ext_resource type="PackedScene" uid="uid://du6byd12byrk3" path="res://src/scenes/player-score.tscn" id="2_p75t1"]

[node name="Game-loop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_23wpu")

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 360.0
offset_top = 203.0
offset_right = 768.0
offset_bottom = 286.0
theme_override_font_sizes/font_size = 60
text = "Pergunta aqui"

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 419.0
offset_top = 74.0
offset_right = 607.0
offset_bottom = 143.0
theme_override_font_sizes/font_size = 50

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 544.0
offset_top = 288.0
offset_right = 584.0
offset_bottom = 328.0

[node name="ColorTimer" type="Timer" parent="ColorRect"]
wait_time = 0.5
one_shot = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 495.0
offset_top = 348.0
offset_right = 631.0
offset_bottom = 411.0

[node name="Button1" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "1"

[node name="Button2" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "2"

[node name="Button3" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "3"

[node name="Button4" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "4"

[node name="Player-score" parent="." instance=ExtResource("2_p75t1")]
layout_mode = 1

[node name="FinalLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 260.0
offset_top = 94.0
offset_right = 916.0
offset_bottom = 190.0
theme_override_font_sizes/font_size = 70
text = "Final message label"

[node name="QuestionCountLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1059.0
offset_top = 9.0
offset_right = 1120.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 40
text = "0/0"

[connection signal="timeout" from="ColorRect/ColorTimer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="HBoxContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="HBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="HBoxContainer/Button4" to="." method="_on_button_4_pressed"]
